# VibeStock

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package-lock.json
android/: build.gradle.kts
android/app/: build.gradle.kts  local.properties
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/vibe/stock/: ApiClient.kt  MainActivity.kt  ScannerActivity.kt
android/app/src/main/java/com/vibestock/scanner/: ApiClient.kt  MainActivity.kt  ScannerActivity.kt
android/app/src/main/res/layout/: activity_main.xml  activity_scanner.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
api/: Cargo.toml  ports.txt
api/migrations/: 001_init.sql  002_seed.sql  003_fix_passwords.sql  004_multi_tenant_support.sql  005_geography_support.sql  006_india_seed.sql  006_seed_geography.sql  007_comprehensive_seed.sql  007_tenant_scoped_uniques.sql
api/src/: auth.rs  config.rs  db.rs  lib.rs  main.rs  middleware.rs
api/src/handlers/: auth_handler.rs  categories.rs  dashboard.rs  geography.rs  mod.rs  products.rs  reports.rs  stock_movements.rs  suppliers.rs  tenants.rs  users.rs  websocket.rs
desktop/: index.html  package-lock.json  package.json  vite.config.js
desktop/src/: App.svelte  app.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/components/: AppShell.svelte  Globe3D.svelte  Sidebar.svelte
desktop/src/lib/: api.js
desktop/src/routes/: Dashboard.svelte  Login.svelte  Movements.svelte  Products.svelte  Reports.svelte  Suppliers.svelte  Tenants.svelte  Users.svelte
desktop/src/stores/: auth.js  theme.js  toast.js
desktop/src/styles/: design-system.css
scripts/: generate_seed.ps1
shared/: Cargo.toml
shared/src/: dto.rs  errors.rs  lib.rs  models.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  app.css  main.js
web/src/components/: AppShell.svelte  Globe3D.svelte  Toast.svelte
web/src/lib/: api.js
web/src/routes/: Categories.svelte  Dashboard.svelte  Globe.svelte  Login.svelte  Movements.svelte  Products.svelte  Register.svelte  Reports.svelte  Suppliers.svelte  Users.svelte
web/src/stores/: auth.js  router.js  toast.js
