[package]
name = "vibestock-desktop"
version = "0.1.0"
edition = "2021"

# ── Tauri build dependency ──────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# HTTP client for calling VibeStock API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow    = "1"
thiserror = "1"
